// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GamesList > snapshots > GameCard loss outcome snapshot (blue wins) 1`] = `
<article
  class="card "
>
  <header
    class="cardHeader"
  >
    <span
      class="gameId"
    >
      #
      2
    </span>
    <time
      class="timestamp"
    >
      STABLE_TIMESTAMP
    </time>
    <span
      class="points"
    >
      10
       pts
    </span>
    <div
      class="rowActions"
    >
      <button
        class="rowButton"
        type="button"
      >
        Edit
      </button>
      <button
        class="rowButton danger"
        type="button"
      >
        Delete
      </button>
    </div>
  </header>
  <div
    class="match"
  >
    <div
      class="team team_red outcome_loss"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Lars/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Joan/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Lars & Joan
      </span>
      <span
        class="outcomeBadge"
      >
        Lost
      </span>
    </div>
    <span
      aria-hidden="true"
      class="versus"
    >
      vs
    </span>
    <div
      class="team team_blue outcome_win"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Frank/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Daniel/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Frank & Daniel
      </span>
      <span
        class="outcomeBadge"
      >
        Won
      </span>
    </div>
  </div>
</article>
`;

exports[`GamesList > snapshots > GameCard tie outcome snapshot 1`] = `
<article
  class="card "
>
  <header
    class="cardHeader"
  >
    <span
      class="gameId"
    >
      #
      3
    </span>
    <time
      class="timestamp"
    >
      STABLE_TIMESTAMP
    </time>
    <span
      class="points"
    >
      10
       pts
    </span>
    <div
      class="rowActions"
    >
      <button
        class="rowButton"
        type="button"
      >
        Edit
      </button>
      <button
        class="rowButton danger"
        type="button"
      >
        Delete
      </button>
    </div>
  </header>
  <div
    class="match"
  >
    <div
      class="team team_red outcome_tie"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Lars/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Joan/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Lars & Joan
      </span>
      <span
        class="outcomeBadge"
      >
        Tie
      </span>
    </div>
    <span
      aria-hidden="true"
      class="versus"
    >
      vs
    </span>
    <div
      class="team team_blue outcome_tie"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Frank/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Daniel/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Frank & Daniel
      </span>
      <span
        class="outcomeBadge"
      >
        Tie
      </span>
    </div>
  </div>
</article>
`;

exports[`GamesList > snapshots > GameCard win outcome snapshot 1`] = `
<article
  class="card "
>
  <header
    class="cardHeader"
  >
    <span
      class="gameId"
    >
      #
      1
    </span>
    <time
      class="timestamp"
    >
      STABLE_TIMESTAMP
    </time>
    <span
      class="points"
    >
      10
       pts
    </span>
    <div
      class="rowActions"
    >
      <button
        class="rowButton"
        type="button"
      >
        Edit
      </button>
      <button
        class="rowButton danger"
        type="button"
      >
        Delete
      </button>
    </div>
  </header>
  <div
    class="match"
  >
    <div
      class="team team_red outcome_win"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Lars/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Joan/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Lars & Joan
      </span>
      <span
        class="outcomeBadge"
      >
        Won
      </span>
    </div>
    <span
      aria-hidden="true"
      class="versus"
    >
      vs
    </span>
    <div
      class="team team_blue outcome_loss"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Frank/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Daniel/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Frank & Daniel
      </span>
      <span
        class="outcomeBadge"
      >
        Lost
      </span>
    </div>
  </div>
</article>
`;

exports[`GamesList > snapshots > GameCard with row actions snapshot (edit + delete buttons) 1`] = `
<article
  class="card "
>
  <header
    class="cardHeader"
  >
    <span
      class="gameId"
    >
      #
      4
    </span>
    <time
      class="timestamp"
    >
      STABLE_TIMESTAMP
    </time>
    <span
      class="points"
    >
      25
       pts
    </span>
    <div
      class="rowActions"
    >
      <button
        class="rowButton"
        type="button"
      >
        Edit
      </button>
      <button
        class="rowButton danger"
        type="button"
      >
        Delete
      </button>
    </div>
  </header>
  <div
    class="match"
  >
    <div
      class="team team_red outcome_win"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Lars/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Joan/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Lars & Joan
      </span>
      <span
        class="outcomeBadge"
      >
        Won
      </span>
    </div>
    <span
      aria-hidden="true"
      class="versus"
    >
      vs
    </span>
    <div
      class="team team_blue outcome_loss"
    >
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Frank/photo?v=0"
      />
      <img
        alt=""
        class="avatar"
        decoding="async"
        loading="lazy"
        src="http://localhost:5050/players/Daniel/photo?v=0"
      />
      <span
        class="teamLabel"
      >
        Frank & Daniel
      </span>
      <span
        class="outcomeBadge"
      >
        Lost
      </span>
    </div>
  </div>
</article>
`;

exports[`GamesList > snapshots > matches snapshot when empty 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="tabsRow"
    >
      <div
        class="tabs"
      >
        <button
          class="tab "
          type="button"
        >
          Last hour
        </button>
        <button
          class="tab "
          type="button"
        >
          Today
        </button>
        <button
          aria-current="true"
          class="tab active"
          type="button"
        >
          This week
        </button>
        <button
          class="tab "
          type="button"
        >
          This month
        </button>
        <button
          class="tab "
          type="button"
        >
          All time
        </button>
      </div>
      <button
        class="clearAll"
        disabled=""
        type="button"
      >
        Clear all games
      </button>
    </div>
    <p
      class="muted"
    >
      No games in this period. Played games will appear here.
    </p>
    <button
      aria-label="Report game"
      class="fab"
      title="Report game"
      type="button"
    >
      +
    </button>
    <dialog
      aria-labelledby="_r_1v_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_1v_"
          >
            Report game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        >
          <form
            class="form"
            novalidate=""
          >
            <fieldset
              class="team"
            >
              <legend
                class="teamLegend"
                data-color="red"
              >
                Red team
              </legend>
              <select
                class="select"
                name="red1"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
              <select
                class="select"
                name="red2"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
            </fieldset>
            <fieldset
              class="team"
            >
              <legend
                class="teamLegend"
                data-color="blue"
              >
                Blue team
              </legend>
              <select
                class="select"
                name="blue1"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
              <select
                class="select"
                name="blue2"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
            </fieldset>
            <fieldset
              class="outcome"
            >
              <legend>
                Winner
              </legend>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="red"
                />
                Red
              </label>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="blue"
                />
                Blue
              </label>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="draw"
                />
                Tie
              </label>
            </fieldset>
            <div
              class="numbers"
            >
              <label
                class="numberField"
              >
                <span>
                  Points
                </span>
                <input
                  class="numberInput"
                  max="99"
                  min="0"
                  name="points"
                  type="number"
                />
              </label>
              <label
                class="numberField"
              >
                <span>
                  Table
                </span>
                <input
                  class="numberInput"
                  max="99"
                  min="1"
                  name="table"
                  type="number"
                />
              </label>
            </div>
            <div
              class="actions"
            >
              <button
                class="submit"
                type="submit"
              >
                Report game
              </button>
              <button
                class="cancel"
                type="button"
              >
                Cancel
              </button>
            </div>
          </form>
        </div>
      </div>
    </dialog>
    <dialog
      aria-labelledby="_r_20_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_20_"
          >
            Edit game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        />
      </div>
    </dialog>
    <dialog
      aria-labelledby="_r_21_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_21_"
          >
            Delete game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        />
      </div>
    </dialog>
  </div>
</div>
`;

exports[`GamesList > snapshots > matches snapshot with games 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="tabsRow"
    >
      <div
        class="tabs"
      >
        <button
          class="tab "
          type="button"
        >
          Last hour
        </button>
        <button
          class="tab "
          type="button"
        >
          Today
        </button>
        <button
          aria-current="true"
          class="tab active"
          type="button"
        >
          This week
        </button>
        <button
          class="tab "
          type="button"
        >
          This month
        </button>
        <button
          class="tab "
          type="button"
        >
          All time
        </button>
      </div>
      <button
        class="clearAll"
        type="button"
      >
        Clear all games
      </button>
    </div>
    <ol
      class="list"
    >
      <li>
        <article
          class="card "
        >
          <header
            class="cardHeader"
          >
            <span
              class="gameId"
            >
              #
              100
            </span>
            <time
              class="timestamp"
            >
              STABLE_TIMESTAMP
            </time>
            <span
              class="points"
            >
              25
               pts
            </span>
            <div
              class="rowActions"
            >
              <button
                class="rowButton"
                type="button"
              >
                Edit
              </button>
              <button
                class="rowButton danger"
                type="button"
              >
                Delete
              </button>
            </div>
          </header>
          <div
            class="match"
          >
            <div
              class="team team_red outcome_win"
            >
              <img
                alt=""
                class="avatar"
                decoding="async"
                loading="lazy"
                src="http://localhost:5050/players/Lars/photo?v=0"
              />
              <img
                alt=""
                class="avatar"
                decoding="async"
                loading="lazy"
                src="http://localhost:5050/players/Joan/photo?v=0"
              />
              <span
                class="teamLabel"
              >
                Lars & Joan
              </span>
              <span
                class="outcomeBadge"
              >
                Won
              </span>
            </div>
            <span
              aria-hidden="true"
              class="versus"
            >
              vs
            </span>
            <div
              class="team team_blue outcome_loss"
            >
              <img
                alt=""
                class="avatar"
                decoding="async"
                loading="lazy"
                src="http://localhost:5050/players/Frank/photo?v=0"
              />
              <img
                alt=""
                class="avatar"
                decoding="async"
                loading="lazy"
                src="http://localhost:5050/players/Daniel/photo?v=0"
              />
              <span
                class="teamLabel"
              >
                Frank & Daniel
              </span>
              <span
                class="outcomeBadge"
              >
                Lost
              </span>
            </div>
          </div>
        </article>
      </li>
    </ol>
    <button
      aria-label="Report game"
      class="fab"
      title="Report game"
      type="button"
    >
      +
    </button>
    <dialog
      aria-labelledby="_r_1s_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_1s_"
          >
            Report game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        >
          <form
            class="form"
            novalidate=""
          >
            <fieldset
              class="team"
            >
              <legend
                class="teamLegend"
                data-color="red"
              >
                Red team
              </legend>
              <select
                class="select"
                name="red1"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
              <select
                class="select"
                name="red2"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
            </fieldset>
            <fieldset
              class="team"
            >
              <legend
                class="teamLegend"
                data-color="blue"
              >
                Blue team
              </legend>
              <select
                class="select"
                name="blue1"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
              <select
                class="select"
                name="blue2"
              >
                <option
                  value=""
                >
                  Pick a player…
                </option>
                <option
                  value="Daniel"
                >
                  Daniel
                </option>
                <option
                  value="Frank"
                >
                  Frank
                </option>
                <option
                  value="Joan"
                >
                  Joan
                </option>
                <option
                  value="Lars"
                >
                  Lars
                </option>
              </select>
            </fieldset>
            <fieldset
              class="outcome"
            >
              <legend>
                Winner
              </legend>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="red"
                />
                Red
              </label>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="blue"
                />
                Blue
              </label>
              <label
                class="radio"
              >
                <input
                  name="winner"
                  type="radio"
                  value="draw"
                />
                Tie
              </label>
            </fieldset>
            <div
              class="numbers"
            >
              <label
                class="numberField"
              >
                <span>
                  Points
                </span>
                <input
                  class="numberInput"
                  max="99"
                  min="0"
                  name="points"
                  type="number"
                />
              </label>
              <label
                class="numberField"
              >
                <span>
                  Table
                </span>
                <input
                  class="numberInput"
                  max="99"
                  min="1"
                  name="table"
                  type="number"
                />
              </label>
            </div>
            <div
              class="actions"
            >
              <button
                class="submit"
                type="submit"
              >
                Report game
              </button>
              <button
                class="cancel"
                type="button"
              >
                Cancel
              </button>
            </div>
          </form>
        </div>
      </div>
    </dialog>
    <dialog
      aria-labelledby="_r_1t_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_1t_"
          >
            Edit game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        />
      </div>
    </dialog>
    <dialog
      aria-labelledby="_r_1u_"
      class="dialog"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
            id="_r_1u_"
          >
            Delete game
          </h2>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
        </header>
        <div
          class="body"
        />
      </div>
    </dialog>
  </div>
</div>
`;
